-----------------------------
 Change history for MATPOWER
-----------------------------

Version:    5.0

maintained by Ray Zimmerman <rz10@cornell.edu>

MATPOWER
$Id$
Copyright (c) 1996-2015 by Power System Engineering Research Center (PSERC)
See http://www.pserc.cornell.edu/matpower/ for more info.


Changes since 5.0
-----------------

2/25/15
    - Switch to more permissive 3-clause BSD license from GPL 3.0.

2/24/15
    - Added function mpoption_info_intlinprog(), tag 'intlinprog' to
      have_fcn() and optional 'intlinprog' field to MATPOWER options.
    - Added miqps_matpower(), a wrapper function for various solvers
      of mixed-integer linear and quadratic programs. Functionality
      implemented by miqps_cplex(), miqps_glpk(), miqps_gurobi(),
      miqps_mosek() and miqps_ot(). Added corresponding
      t/t_miqps_matpower() to test suite.

2/18/15
    - Changed generator and dispatchable load sections in printpf()
      output to include off-line units, after all, it already has a
      Status column.

2/13/15
    - Added explicit colors to plots in cpf_default_callback() so things
      look right in newer Matlab versions (R2014b and later).

2/6/15
    - Modified nested_struct_copy() to eliminate cellfun() call that
      was not supported in Matlab 7.0.x. Noted that runcpf() also
      requires Matlab 7.1 or later due to a call to cellfun().
      Included code to skip certain tests that require that cellfun()
      functionality when running under Matlab 7.0.x.

2/5/15
    - Replaced regexp(... 'split') construct in mpoption() with
      regexp(... 'tokens') since it was causing fatal errors on
      Matlab versions < 7.3, which did not have that feature.
    - Fixed fatal error in when using fast-decoupled power flow
      on Matlab versions < 7.3, caused by use of newer
      lu(... 'vector') construct.

2/3/15
    - Added check to have_fcn() for installation of ipopt_auxdata.m
      when Ipopt >= 3.11.x is detected, to warn about incomplete