@@ -73,9 +73,14 @@ function om = add_costs(om, name, idx, varargin)
 %   See http://matpower.org/ for more info.
 
 if iscell(idx)
-    if length(varargin)         %% indexed named set
-        s1 = substruct('.', name, '()', idx);
-        s2 = substruct('.', name, '{}', idx);
+    if ~isempty(varargin)       %% indexed named set
+        % (calls to substruct() are relatively expensive ...
+        % s1 = substruct('.', name, '()', idx);
+        % s2 = substruct('.', name, '{}', idx);
+        % ... so replace them with these more efficient lines)
+        s1 = struct('type', {'.', '()'}, 'subs', {name, idx});
+        s2 = s1;
+        s2(2).type = '{}';
         
         %% prevent duplicate named cost sets
         if subsref(om.cost.idx.i1, s1) ~= 0
@@ -85,7 +90,7 @@ if iscell(idx)
         end
         
         cp = varargin{1};
-        args = { varargin{2:end} };
+        args = varargin(2:end);
     else                        %% just setting dimensions for indexed set
         %% prevent duplicate named cost sets
         if isfield(om.cost.idx.N, name)
@@ -138,8 +143,13 @@ else
         nv = om.var.N;
     else
         nv = 0;
+        s = struct('type', {'.', '()'}, 'subs', {'', 1});
         for k = 1:length(varsets)
-            s = substruct('.', varsets(k).name, '()', varsets(k).idx);
+            % (calls to substruct() are relatively expensive ...
+            % s = substruct('.', varsets(k).name, '()', varsets(k).idx);
+            % ... so replace it with these more efficient lines)
+            s(1).subs = varsets(k).name;
+            s(2).subs = varsets(k).idx;
             nv = nv + subsref(om.var.idx.N, s);
         end
     end
